# Pokebay

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: d22fbade091a_create_products_and_listings_tables.py  d5cbe8155f95_add_unique_constraint_to_tcg_product_id.py
src/pokebay/: config.py  main.py
src/pokebay/clients/: ebay.py  tcgplayer.py
src/pokebay/db/: engine.py
src/pokebay/db/models/: listing.py  product.py
src/pokebay/ingestion/: runner.py
src/pokebay/matching/: matcher.py
src/pokebay/scoring/: deal_scorer.py
src/pokebay/scripts/: test_ebay.py  test_tcg.py
src/pokebay/static/: index.html
