# Tells python how to build the project, hatchling is standard

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokebay-api"
version = "0.1.0"
description = "Extension that helps find underpriced Ebay listings for pokemon cards"
# readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "rapidfuzz>=3.9",
    "apscheduler>=3.10",
    "resend>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
    "sqlalchemy[mypy]>=2.0",
]

[project.scripts]
pokebay-ingest = "pokebay.ingestion.runner:main"
pokebay-match = "pokebay.matching.matcher:main"
pokebay-score = "pokebay.scoring.deal_scorer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pokebay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]



